# oxi

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: audit.toml
.claude/loops/: README.md  fixer.md  implementer.md  reviewer.md  start-loops.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: release_changelog.py  test_release_changelog.py
.github/workflows/: ci.yml  release.yml
docs/: index.html
scripts/: bundle-macos.sh
src/: git.rs  hydrate.rs  local_models.rs  local_models_remote.rs  main.rs  markdown.rs  model.rs  rust_goto.rs  secrets.rs  session_store.rs  settings.rs  terminal.rs  theme.rs  update.rs  voice_engine.rs  voice_models.rs
src/agent/: acp.rs  anthropic.rs  approval.rs  codex_responses.rs  complete.rs  copilot.rs  events.rs  history.rs  loop_ctx.rs  mcp.rs  mod.rs  models.rs  net.rs  openai.rs  prompt.rs  runner.rs  tools.rs
src/agent/acp/: client_fs.rs  tests.rs  update_events.rs
src/agent/runner/: provider_config.rs  tests.rs
src/agent/tools/: definitions.rs  diff.rs  file_ops.rs  mod.rs  paths.rs  shell_search.rs  tests.rs  undo.rs  web.rs
src/agent/tools/tests/: definitions_and_diff.rs  file_tools.rs  path_and_shell_safety.rs  routing_and_undo.rs  search_tools.rs
src/agent/tools/web/: tests.rs
src/app/: agent_handlers.rs  compaction.rs  composer.rs  composer_helpers.rs  confirm.rs  connection.rs  conversation.rs  eframe_app.rs  file_explorer.rs  git_panel.rs  input_history.rs  layout.rs  mentions.rs  mod.rs  sessions.rs  settings_ui.rs  sidebar.rs  state.rs  status_bar.rs  streaming.rs  task_runner.rs  terminal_panel.rs  update_check.rs
src/app/composer/: voice_context.rs
src/app/conversation/: tests.rs  transcript_model.rs
src/app/file_explorer/: documents.rs  editor_body.rs  editor_logic.rs  editor_paint.rs  editor_tabs.rs  explorer_tree.rs  file_operations.rs  file_picker.rs  find_replace.rs  layout_cache.rs  minimap.rs  mod.rs  navigation_diff.rs  support.rs
src/app/git_panel/: changes.rs  commit_gen.rs  refs.rs
src/app/settings_ui/: about_panel.rs  agent_panel.rs  appearance_panel.rs  dictation_panel.rs  github_panel.rs  layout.rs  local_hf_messages.rs  local_hf_panel.rs  local_hf_runtime.rs  panels.rs  profile.rs  prompts_panel.rs  provider_catalog.rs  provider_models.rs  provider_oauth.rs  provider_panel.rs  provider_ssh.rs  providers_panel.rs  terminal_panel.rs
src/compute/: mod.rs  ssh.rs  store.rs  tunnel.rs
src/git/: network.rs
src/markdown/: blocks.rs  inline.rs  table.rs
src/oauth/: codex.rs  github.rs  mod.rs  store.rs
src/session_store/: dedupe.rs  format.rs  io.rs  paths.rs
src/settings/: app_settings.rs  provider.rs
src/settings/app_settings/: migration.rs  mod.rs  persistence.rs  query.rs  tests.rs  types.rs
src/terminal/: encoding.rs
src/theme/: catalog.rs  format.rs  palette.rs  style.rs  syntax.rs  tree_sitter.rs
src/ui/: chrome.rs  diff.rs  messages.rs  mod.rs  preview_expand.rs
src/ui/chrome/: copy_modal.rs
src/ui/messages/: thinking.rs  tool_format.rs  tool_pill.rs
