[package]
name = "oxi"
version = "0.20.0"
edition = "2024"
# Floor set by the strictest dependency (egui 0.35 requires 1.92).
rust-version = "1.92"
description = "Standalone coding agent chat UI (Rust + egui; OpenAI-compatible LLMs + local tools)"
license = "MIT"
repository = "https://github.com/maziluiosif/oxi"
readme = "README.md"
keywords = ["gui", "llm", "coding-agent", "egui", "chat"]
categories = ["development-tools", "gui"]

[dependencies]
eframe = { version = "0.35", default-features = false, features = ["accesskit", "default_fonts", "wayland", "wgpu", "x11"] }
egui = "0.35"
egui_extras = { version = "0.35", features = ["all_loaders", "syntect"] }
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
tree-sitter = "0.25.10"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.13"
base64 = "0.22"
arboard = "3.6"
rfd = "0.17"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "process"] }
russh = "0.62"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "query", "form"] }
futures-util = "0.3"
bytes = "1"
regex = "1"
glob = "0.3"
git2 = { version = "0.21", features = ["https", "ssh", "vendored-libgit2"] }
walkdir = "2"
fontdb = "0.23"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "6"
sha2 = "0.11"
rand = "0.10"
webbrowser = "1"
url = "2"
portable-pty = "0.9"
vt100 = "0.16"
keyring-core = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
cpal = "0.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }
whisper-rs = { version = "0.16", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = "0.16"

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"
windows-sys = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "ios", target_os = "android"))))'.dependencies]
zbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
wiremock = "0.6"

# Pin the whole egui 0.35 family to a small editor-performance fork. It skips native selection
# painting when fully transparent (the editor draws the same visuals itself) and shares undo text
# snapshots across selection-only frames instead of copying the full buffer. All family crates are
# pinned together so they resolve to a single source (mixing git + crates.io copies of epaint/emath
# breaks type unification). Rebase this branch when bumping egui.
[patch.crates-io]
ecolor = { git = "https://github.com/maziluiosif/egui", rev = "82ee9a5223b077ac5a090dd68c413a3ae4b35e97" }
emath = { git = "https://github.com/maziluiosif/egui", rev = "82ee9a5223b077ac5a090dd68c413a3ae4b35e97" }
epaint = { git = "https://github.com/maziluiosif/egui", rev = "82ee9a5223b077ac5a090dd68c413a3ae4b35e97" }
epaint_default_fonts = { git = "https://github.com/maziluiosif/egui", rev = "82ee9a5223b077ac5a090dd68c413a3ae4b35e97" }
egui = { git = "https://github.com/maziluiosif/egui", rev = "82ee9a5223b077ac5a090dd68c413a3ae4b35e97" }
egui_extras = { git = "https://github.com/maziluiosif/egui", rev = "82ee9a5223b077ac5a090dd68c413a3ae4b35e97" }
egui-winit = { git = "https://github.com/maziluiosif/egui", rev = "82ee9a5223b077ac5a090dd68c413a3ae4b35e97" }
egui_glow = { git = "https://github.com/maziluiosif/egui", rev = "82ee9a5223b077ac5a090dd68c413a3ae4b35e97" }
eframe = { git = "https://github.com/maziluiosif/egui", rev = "82ee9a5223b077ac5a090dd68c413a3ae4b35e97" }
